all-in-one.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: dangkyhoc
---
# Deployment FE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dangkyhoc-frontend-deployment
  namespace: dangkyhoc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dangkyhoc-frontend
  template:
    metadata:
      labels:
        app: dangkyhoc-frontend
    spec:
      containers:
        - name: dangkyhoc-frontend
          image: npnlong/dangkyhoc-fe:v5
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
---
# Service FE
apiVersion: v1
kind: Service
metadata:
  name: dangkyhoc-frontend-service
  namespace: dangkyhoc
spec:
  type: ClusterIP
  selector:
    app: dangkyhoc-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
# Deployment BE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dangkyhoc-backend-deployment
  namespace: dangkyhoc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dangkyhoc-backend
  template:
    metadata:
      labels:
        app: dangkyhoc-backend
    spec:
      containers:
        - name: dangkyhoc-backend
          image: npnlong/dangkyhoc-be:v6
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          command: ["gunicorn"]
          args:
            - "app:app"
            - "--bind=0.0.0.0:5000"
            - "--workers=2"
            - "--threads=4"
            - "--timeout=60"
            - "--access-logfile=-"
            - "--error-logfile=-"
            - "--log-level=info"
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "400m"
              memory: "768Mi"
---
# Service BE
apiVersion: v1
kind: Service
metadata:
  name: dangkyhoc-backend-service
  namespace: dangkyhoc
spec:
  type: ClusterIP
  selector:
    app: dangkyhoc-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
---
# Ingress FE
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dangkyhoc-frontend-ingress
  namespace: dangkyhoc
spec:
  ingressClassName: nginx
  rules:
    - host: testdangkyhoc.vnu.edu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dangkyhoc-frontend-service
                port:
                  number: 80
---
# Ingress BE
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dangkyhoc-backend-ingress
  namespace: dangkyhoc
spec:
  ingressClassName: nginx
  rules:
    - host: api-testdangkyhoc.vnu.edu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dangkyhoc-backend-service
                port:
                  number: 5000
